--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,5 @@
-<h1>About Page</h1>
+<div class="container text-center">
+    <h1>About Page</h1>
+    <p>We are DevMatch, out company focuses on creating an exclusive commnunity
+    for developers and entrepreneurs to meet.</p>
+</div>
